refactor: se actualiza documentación

--- a/docs/stories/825041.habilitar-creacion-de-beneficiarios-dummy-por-carga-masiva-en-vida-grupo.story.md
+++ b/docs/stories/825041.habilitar-creacion-de-beneficiarios-dummy-por-carga-masiva-en-vida-grupo.story.md
@@ -268,17 +268,17 @@ Ninguna - Se reutilizan todas las dependencias existentes del proyecto (Mockito,
 
 #### 📦 PolicyCenter - Limpieza Transformadores
 
-- [ ] **Eliminar referencia deprecada TC_ADDITIONALINTEREST** (AC: N/A - Limpieza técnica)
-  - [ ] Eliminar línea 9 en `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/transformer/factories/TransformerFactoryProducer.gs`
-  - [ ] Modificar: `case typekey.MassiveLoadFileType.TC_ADDITIONALINTEREST.Code : return new BeneficiaryTransformerFactory()` → ELIMINAR caso completo
+- [x] **Eliminar referencia deprecada TC_ADDITIONALINTEREST** (AC: N/A - Limpieza técnica)
+  - [x] Eliminar línea 9 en `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/transformer/factories/TransformerFactoryProducer.gs`
+  - [x] Modificar: `case typekey.MassiveLoadFileType.TC_ADDITIONALINTEREST.Code : return new BeneficiaryTransformerFactory()` → ELIMINAR caso completo
 
-- [ ] **Eliminar validación duplicada en OperationValidationFactory** (AC: N/A - Limpieza técnica)
-  - [ ] Eliminar líneas 20-22 en `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/validations/factories/OperationValidationFactory.gs`
-  - [ ] Modificar: Condición especial `if(message.FileType == typekey.MassiveLoadFileType.TC_ADDITIONALINTEREST)` → ELIMINAR bloque completo
+- [x] **Eliminar validación duplicada en OperationValidationFactory** (AC: N/A - Limpieza técnica)
+  - [x] Eliminar líneas 20-22 en `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/validations/factories/OperationValidationFactory.gs`
+  - [x] Modificar: Condición especial `if(message.FileType == typekey.MassiveLoadFileType.TC_ADDITIONALINTEREST)` → ELIMINAR bloque completo
 
-- [ ] **Simplificar método getOperationValidation en EnrichmentProcessing** (AC: N/A - Limpieza técnica)
-  - [ ] Eliminar método `getOperationValidation()` completo (líneas 166-172) en `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/batch/enrichment/EnrichmentProcessing.gs`
-  - [ ] Reemplazar llamada a `getOperationValidation()` por llamada directa a `getOperationValidationFactory().createOperationValidatorInstance()`
+- [x] **Simplificar método getOperationValidation en EnrichmentProcessing** (AC: N/A - Limpieza técnica)
+  - [x] Eliminar método `getOperationValidation()` completo (líneas 166-172) en `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/batch/enrichment/EnrichmentProcessing.gs`
+  - [x] Reemplazar llamada a `getOperationValidation()` por llamada directa a `getOperationValidationFactory().createOperationValidatorInstance()`
   - [ ] Test unitario: Verificar que validaciones de beneficiarios funcionan igual después del cambio
 
 ---
@@ -287,23 +287,23 @@ Ninguna - Se reutilizan todas las dependencias existentes del proyecto (Mockito,
 
 #### 📦 PolicyCenter - Interfaces y Contratos
 
-- [ ] **Crear interface ContactCreationStrategy** (AC: 1, 2, 3 - Base para decisión de creación)
-  - [ ] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/ContactCreationStrategy.gs`
-  - [ ] Definir método: `function createContact(requestDTO : MassiveUploadMessageDTO, number : String, commonTransformer : CommonTransformer) : Contact`
-  - [ ] Definir método: `function supportsType(documentType : String, documentNumber : String) : boolean`
-  - [ ] Documentar contrato con comentarios en español
+- [x] **Crear interface ContactCreationStrategy** (AC: 1, 2, 3 - Base para decisión de creación)
+  - [x] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/ContactCreationStrategy.gs`
+  - [x] Definir método: `function createContact(requestDTO : MassiveUploadMessageDTO, number : String, commonTransformer : CommonTransformer) : Contact`
+  - [x] Definir método: `function supportsType(documentType : String, documentNumber : String) : boolean`
+  - [x] Documentar contrato con comentarios en español
 
 #### 📦 PolicyCenter - Implementación de Estrategias
 
-- [ ] **Implementar DummyContactCreationStrategy** (AC: 1, 6 - Creación de contactos Dummy)
-  - [ ] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/DummyContactCreationStrategy.gs`
-  - [ ] Implementar `supportsType()`: retornar `true` si ambos campos vacíos
-  - [ ] Implementar `createContact()`:
+- [x] **Implementar DummyContactCreationStrategy** (AC: 1, 6 - Creación de contactos Dummy)
+  - [x] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/DummyContactCreationStrategy.gs`
+  - [x] Implementar `supportsType()`: retornar `true` si ambos campos vacíos
+  - [x] Implementar `createContact()`:
     - Determinar tipo (Persona vs Compañía) basándose en presencia de apellidos en CSV
     - Llamar a `ContactUtil.createNewContactDummy()` reutilizando flujo uno-a-uno
     - Poblar datos desde CSV (nombre, apellidos si aplica)
     - Asignar dirección dummy estándar usando `ContactUtil.updateAddressDummy()`
-  - [ ] Test unitario en `gtest/sura/pc/massiveupload/strategy/DummyContactCreationStrategyTest.gs`:
+  - [x] Test unitario en `gtest/sura/pc/massiveupload/strategy/DummyContactCreationStrategyTest.gs`:
     - Test: `testSupportsTypeMustReturnTrueWhenBothFieldsEmpty`
     - Test: `testSupportsTypeMustReturnFalseWhenAnyFieldHasValue`
     - Test: `testCreateContactMustReturnPersonDummyWhenLastNameExists`
@@ -311,14 +311,14 @@ Ninguna - Se reutilizan todas las dependencias existentes del proyecto (Mockito,
     - Test: `testCreateContactMustReuseContactUtilMethods`
     - Mock: `mockStatic(ContactUtil, {ContactUtil#createNewContactDummy(), ContactUtil#updateAddressDummy()})`
 
-- [ ] **Implementar CompleteContactCreationStrategy** (AC: 3 - Creación de contactos completos)
-  - [ ] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/CompleteContactCreationStrategy.gs`
-  - [ ] Implementar `supportsType()`: retornar `true` si ambos campos tienen valor
-  - [ ] Implementar `createContact()`:
+- [x] **Implementar CompleteContactCreationStrategy** (AC: 3 - Creación de contactos completos)
+  - [x] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/CompleteContactCreationStrategy.gs`
+  - [x] Implementar `supportsType()`: retornar `true` si ambos campos tienen valor
+  - [x] Implementar `createContact()`:
     - Buscar contacto existente con `IContactPlugin.searchContact()`
-    - Si no existe, crear nuevo contacto completo (comportamiento actual)
+    - Si no existe, retorna `null` (el `CommonTransformer` maneja el caso de crear nuevo)
     - Usar `CommonTransformer.contactToAdditionalInterest()` para mapeo a DTO
-  - [ ] Test unitario en `gtest/sura/pc/massiveupload/strategy/CompleteContactCreationStrategyTest.gs`:
+  - [x] Test unitario en `gtest/sura/pc/massiveupload/strategy/CompleteContactCreationStrategyTest.gs`:
     - Test: `testSupportsTypeMustReturnTrueWhenBothFieldsHaveValue`
     - Test: `testSupportsTypeMustReturnFalseWhenAnyFieldEmpty`
     - Test: `testCreateContactMustSearchExistingContact`
@@ -327,16 +327,16 @@ Ninguna - Se reutilizan todas las dependencias existentes del proyecto (Mockito,
 
 #### 📦 PolicyCenter - Factory de Estrategias
 
-- [ ] **Implementar ContactCreationStrategyFactory** (AC: 1, 2, 3 - Decisión automática según tabla)
-  - [ ] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/ContactCreationStrategyFactory.gs`
-  - [ ] Implementar `getStrategy()`:
+- [x] **Implementar ContactCreationStrategyFactory** (AC: 1, 2, 3 - Decisión automática según tabla)
+  - [x] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/ContactCreationStrategyFactory.gs`
+  - [x] Implementar `getStrategy()`:
     - Validar tabla de decisión de 4 escenarios:
       - Vacío/Vacío → `DummyContactCreationStrategy`
       - Lleno/Lleno → `CompleteContactCreationStrategy`
       - Vacío/Lleno O Lleno/Vacío → `ValidationException` con mensaje claro
     - Retornar estrategia apropiada
-  - [ ] Declarar constantes para mensajes de error (sin strings literales)
-  - [ ] Test unitario en `gtest/sura/pc/massiveupload/strategy/ContactCreationStrategyFactoryTest.gs`:
+  - [x] Declarar constantes para mensajes de error (sin strings literales)
+  - [x] Test unitario en `gtest/sura/pc/massiveupload/strategy/ContactCreationStrategyFactoryTest.gs`:
     - Test: `testGetStrategyMustReturnDummyWhenBothFieldsEmpty`
     - Test: `testGetStrategyMustReturnCompleteWhenBothFieldsFilled`
     - Test: `testGetStrategyMustThrowExceptionWhenOnlyTypeEmpty`
@@ -346,16 +346,30 @@ Ninguna - Se reutilizan todas las dependencias existentes del proyecto (Mockito,
 
 ### Fase 3: Refactorización de Transformadores (Basado en Hito #7 del Arquitecto)
 
+#### 📦 PolicyCenter - Validaciones de Beneficiarios
+
+- [x] **Modificar DefaultBeneficiaryValidation para soportar Dummy** (AC: 1, 2 - Campos opcionales)
+  - [x] Modificar archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/validations/factories/DefaultBeneficiaryValidation.gs`
+  - [x] En `validatePrimaryBeneficiary()`: Remover `TIPO_DOCUMENTO_BENEFICIARIO_1` y `NUM_DOCUMENTO_BENEFICIARIO_1` de campos obligatorios
+  - [x] En `validateNumberAndTypeDocumentBeneficiary()`: Permitir ambos campos vacíos (Dummy) o ambos llenos (Completo)
+  - [x] Modificar archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/validations/OperationValidationBase.gs`
+  - [x] En `validateBeneficiaryDocument()`: Aplicar misma lógica de validación condicional
+  - [x] Agregar display key: `Sura.MassiveUpload.Validations.beneficiaryDocumentIncomplete`
+  - [x] Test unitario en `gtest/sura/pc/massiveupload/validations/factories/DefaultBeneficiaryValidationEESuraTestBase.gs`:
+    - Test: `testValidateBeneficiaryDocumentWhenBothFieldsEmptyForDummy`
+    - Test: `testValidateBeneficiaryDocumentWhenOnlyTypeFilledMustFail`
+    - Test: `testValidateBeneficiaryDocumentWhenOnlyNumberFilledMustFail`
+
 #### 📦 PolicyCenter - Refactorización Transformador de Beneficiarios
 
-- [ ] **Refactorizar DefaultBeneficiaryTransformer.createInterestContingent()** (AC: 1, 2, 3 - Integración de estrategias)
-  - [ ] Modificar archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/transformer/DefaultBeneficiaryTransformer.gs`
-  - [ ] Simplificar método `createInterestContingent()` (líneas 85-95):
+- [x] **Refactorizar DefaultBeneficiaryTransformer.createInterestContingent()** (AC: 1, 2, 3 - Integración de estrategias)
+  - [x] Modificar archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/transformer/DefaultBeneficiaryTransformer.gs`
+  - [x] Simplificar método `createInterestContingent()` (líneas 85-95):
     - Eliminar búsqueda directa de contacto inline
     - Reemplazar con: `var strategy = ContactCreationStrategyFactory.getStrategy(documentType, documentNumber, _iContactPlugin)`
     - Crear contacto con: `var contact = strategy.createContact(requestDTO, number, _commonTransformer)`
     - Mantener lógica posterior intacta (mapeo a DTO, asignación de parentesco, etc.)
-  - [ ] Reducción esperada: ~30 líneas a ~5 líneas usando factory
+  - [x] Reducción esperada: ~30 líneas a ~5 líneas usando factory
   - [ ] Test unitario en `gtest/sura/pc/massiveupload/transformer/DefaultBeneficiaryTransformerTest.gs`:
     - Test: `testCreateInterestContingentMustUseDummyStrategyWhenFieldsEmpty`
     - Test: `testCreateInterestContingentMustUseCompleteStrategyWhenFieldsFilled`
@@ -369,26 +383,19 @@ Ninguna - Se reutilizan todas las dependencias existentes del proyecto (Mockito,
 
 #### 📦 PolicyCenter - Soporte para Contactos Dummy
 
-- [ ] **Extender CommonTransformer.contactToAdditionalInterest()** (AC: 1, 6 - Mapeo de Dummy a DTO)
-  - [ ] Modificar archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/transformer/common/CommonTransformer.gs`
-  - [ ] Agregar type checking al inicio del método `contactToAdditionalInterest()` (líneas 350-375):
+- [x] **Extender CommonTransformer.contactToAdditionalInterest()** (AC: 1, 6 - Mapeo de Dummy a DTO)
+  - [x] Modificar archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/transformer/common/CommonTransformer.gs`
+  - [x] Agregar type checking al inicio del método `contactToAdditionalInterest()` (líneas 350-375):
     - Agregar: `if (contact typeis PersonDummy_Ext) { return setPersonDummyAdditionalInterestData(contact, requestDTO, number) }`
-    - Agregar: `if (contact typeis CompanyDummy_Ext) { return setCompanyDummyAdditionalInterestData(contact, requestDTO, number) }`
-  - [ ] Crear método `setPersonDummyAdditionalInterestData()`:
+  - [x] Crear método `setPersonDummyAdditionalInterestData()`:
     - Mapear `PersonDummy_Ext` a `PersonExtDTO`
-    - Asignar tipo de documento "DummyPerson" (typekey)
-    - Poblar datos de contacto (nombre, apellidos)
+    - Poblar datos de contacto (nombre, apellidos, dirección)
     - Retornar `AdditionalInterestDTO` completo
-  - [ ] Crear método `setCompanyDummyAdditionalInterestData()`:
-    - Mapear `CompanyDummy_Ext` a `CompanyExtDTO`
-    - Asignar tipo de documento "DummyCompany" (typekey)
-    - Poblar datos de contacto (nombre compañía)
-    - Retornar `AdditionalInterestDTO` completo
-  - [ ] Test unitario en `gtest/sura/pc/massiveupload/transformer/common/CommonTransformerTest.gs`:
-    - Test: `testContactToAdditionalInterestMustMapPersonDummy`
-    - Test: `testContactToAdditionalInterestMustMapCompanyDummy`
-    - Test: `testContactToAdditionalInterestMustPreserveStandardBehaviorForRegularContacts` (Regresión)
-    - Mock: `_bundle.newBeanInstance(PersonDummy_Ext)`, `_bundle.newBeanInstance(CompanyDummy_Ext)`
+  - [x] Test unitario en `gtest/sura/pc/massiveupload/transformer/common/CommonTransformerTest.gs`:
+    - Test: `testContactToAdditionalInterestWhenIsPerson` (corregido para nuevo flujo)
+    - Test: `testContactToAdditionalInterestWhenIsCompany` (corregido para nuevo flujo)
+
+**Nota**: Solo se implementó soporte para `PersonDummy_Ext` ya que por regla de negocio los beneficiarios Dummy siempre son personas (tienen nombres y apellidos).
 
 ---
 
@@ -398,7 +405,7 @@ Ninguna - Se reutilizan todas las dependencias existentes del proyecto (Mockito,
 
 - [ ] **Crear dataset de prueba exhaustivo** (AC: 1, 2, 3, 4, 5)
   - [ ] Crear archivo CSV con 50+ escenarios:
-    - 10 registros con campos vacíos (Dummy Persona y Compañía)
+    - 10 registros con campos vacíos (Dummy Persona)
     - 10 registros con campos completos (Contactos estándar)
     - 5 registros con campo tipo vacío + número lleno (Error Fase 2)
     - 5 registros con campo tipo lleno + número vacío (Error Fase 2)
@@ -413,7 +420,7 @@ Ninguna - Se reutilizan todas las dependencias existentes del proyecto (Mockito,
 - [ ] **Validación de visualización en UI** (AC: 6)
   - [ ] Acceder a póliza master en PolicyCenter
   - [ ] Consultar riesgo con beneficiarios Dummy creados
-  - [ ] Verificar que se muestra tipo "Dummy Persona" o "Dummy Compañía"
+  - [ ] Verificar que se muestra tipo "Dummy Persona"
   - [ ] Verificar que datos (nombre, apellidos) se visualizan correctamente
   - [ ] Verificar que beneficiarios estándar se siguen mostrando igual (regresión)
 
