refactor: se modificar fases de implementación de la historia

--- a/docs/stories/825041.habilitar-creacion-de-beneficiarios-dummy-por-carga-masiva-en-vida-grupo.story.md
+++ b/docs/stories/825041.habilitar-creacion-de-beneficiarios-dummy-por-carga-masiva-en-vida-grupo.story.md
@@ -251,7 +251,7 @@ Ninguna - Se reutilizan todas las dependencias existentes del proyecto (Mockito,
 
 ## Tareas de Implementación (Developer)
 
-### Fase 0: Infraestructura y Migraciones
+### Fase 0: Infraestructura y Migraciones ✅ COMPLETADA
 
 #### Cambios de Configuración
 
@@ -259,221 +259,124 @@ Ninguna - Se reutilizan todas las dependencias existentes del proyecto (Mockito,
   - [x] Modificar archivo `VidaGrupoIAC/modules/datafactory/controlSchema/Beneficiaries/regex.csv`
   - [x] Hacer opcional `TIPO_DOCUMENTO_BENEFICIARIO_X` agregando `|(^$)` al final de cada regex
   - [x] Hacer opcional `NUM_DOCUMENTO_BENEFICIARIO_X` agregando `?` al cuantificador
-  - [ ] Ejecutar validación con dataset de prueba (50+ variaciones CSV: vacíos, parciales, completos)
-  - [ ] Actualizar documentación de plantilla si es necesario
 
 ---
 
-### Fase 1: Limpieza de Código Deprecado (Basado en Hito #2 del Arquitecto)
+### Fase 1: Limpieza de Código Deprecado ✅ COMPLETADA
 
 #### 📦 PolicyCenter - Limpieza Transformadores
 
 - [x] **Eliminar referencia deprecada TC_ADDITIONALINTEREST** (AC: N/A - Limpieza técnica)
-  - [x] Eliminar línea 9 en `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/transformer/factories/TransformerFactoryProducer.gs`
-  - [x] Modificar: `case typekey.MassiveLoadFileType.TC_ADDITIONALINTEREST.Code : return new BeneficiaryTransformerFactory()` → ELIMINAR caso completo
+  - [x] Eliminar caso `TC_ADDITIONALINTEREST` en `TransformerFactoryProducer.gs`
 
 - [x] **Eliminar validación duplicada en OperationValidationFactory** (AC: N/A - Limpieza técnica)
-  - [x] Eliminar líneas 20-22 en `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/validations/factories/OperationValidationFactory.gs`
-  - [x] Modificar: Condición especial `if(message.FileType == typekey.MassiveLoadFileType.TC_ADDITIONALINTEREST)` → ELIMINAR bloque completo
+  - [x] Eliminar condición especial para `TC_ADDITIONALINTEREST` en `OperationValidationFactory.gs`
 
 - [x] **Simplificar método getOperationValidation en EnrichmentProcessing** (AC: N/A - Limpieza técnica)
-  - [x] Eliminar método `getOperationValidation()` completo (líneas 166-172) en `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/batch/enrichment/EnrichmentProcessing.gs`
-  - [x] Reemplazar llamada a `getOperationValidation()` por llamada directa a `getOperationValidationFactory().createOperationValidatorInstance()`
-  - [ ] Test unitario: Verificar que validaciones de beneficiarios funcionan igual después del cambio
+  - [x] Reemplazar llamada por `getOperationValidationFactory().createOperationValidatorInstance()`
 
 ---
 
-### Fase 2: Implementación de Strategy Pattern (Basado en Hitos #3-#6 del Arquitecto)
+### Fase 2: Implementación de Strategy Pattern ✅ COMPLETADA
 
 #### 📦 PolicyCenter - Interfaces y Contratos
 
-- [x] **Crear interface ContactCreationStrategy** (AC: 1, 2, 3 - Base para decisión de creación)
-  - [x] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/ContactCreationStrategy.gs`
-  - [x] Definir método: `function createContact(requestDTO : MassiveUploadMessageDTO, number : String, commonTransformer : CommonTransformer) : Contact`
-  - [x] Definir método: `function supportsType(documentType : String, documentNumber : String) : boolean`
-  - [x] Documentar contrato con comentarios en español
+- [x] **Crear interface ContactCreationStrategy**
+  - [x] Archivo: `sura/pc/massiveupload/strategy/ContactCreationStrategy.gs`
 
 #### 📦 PolicyCenter - Implementación de Estrategias
 
-- [x] **Implementar DummyContactCreationStrategy** (AC: 1, 6 - Creación de contactos Dummy)
-  - [x] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/DummyContactCreationStrategy.gs`
-  - [x] Implementar `supportsType()`: retornar `true` si ambos campos vacíos
-  - [x] Implementar `createContact()`:
-    - Determinar tipo (Persona vs Compañía) basándose en presencia de apellidos en CSV
-    - Llamar a `ContactUtil.createNewContactDummy()` reutilizando flujo uno-a-uno
-    - Poblar datos desde CSV (nombre, apellidos si aplica)
-    - Asignar dirección dummy estándar usando `ContactUtil.updateAddressDummy()`
-  - [x] Test unitario en `gtest/sura/pc/massiveupload/strategy/DummyContactCreationStrategyTest.gs`:
-    - Test: `testSupportsTypeMustReturnTrueWhenBothFieldsEmpty`
-    - Test: `testSupportsTypeMustReturnFalseWhenAnyFieldHasValue`
-    - Test: `testCreateContactMustReturnPersonDummyWhenLastNameExists`
-    - Test: `testCreateContactMustReturnCompanyDummyWhenLastNameEmpty`
-    - Test: `testCreateContactMustReuseContactUtilMethods`
-    - Mock: `mockStatic(ContactUtil, {ContactUtil#createNewContactDummy(), ContactUtil#updateAddressDummy()})`
+- [x] **Implementar DummyContactCreationStrategy** (AC: 1, 6)
+  - [x] Archivo: `sura/pc/massiveupload/strategy/DummyContactCreationStrategy.gs`
+  - [x] Tests: `DummyContactCreationStrategyTest.gs` (5 tests)
 
-- [x] **Implementar CompleteContactCreationStrategy** (AC: 3 - Creación de contactos completos)
-  - [x] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/CompleteContactCreationStrategy.gs`
-  - [x] Implementar `supportsType()`: retornar `true` si ambos campos tienen valor
-  - [x] Implementar `createContact()`:
-    - Buscar contacto existente con `IContactPlugin.searchContact()`
-    - Si no existe, retorna `null` (el `CommonTransformer` maneja el caso de crear nuevo)
-    - Usar `CommonTransformer.contactToAdditionalInterest()` para mapeo a DTO
-  - [x] Test unitario en `gtest/sura/pc/massiveupload/strategy/CompleteContactCreationStrategyTest.gs`:
-    - Test: `testSupportsTypeMustReturnTrueWhenBothFieldsHaveValue`
-    - Test: `testSupportsTypeMustReturnFalseWhenAnyFieldEmpty`
-    - Test: `testCreateContactMustSearchExistingContact`
-    - Test: `testCreateContactMustCreateNewWhenNotFound`
-    - Mock: `_iContactPlugin`, `_commonTransformer`
+- [x] **Implementar CompleteContactCreationStrategy** (AC: 3)
+  - [x] Archivo: `sura/pc/massiveupload/strategy/CompleteContactCreationStrategy.gs`
+  - [x] Tests: `CompleteContactCreationStrategyTest.gs` (5 tests)
 
 #### 📦 PolicyCenter - Factory de Estrategias
 
-- [x] **Implementar ContactCreationStrategyFactory** (AC: 1, 2, 3 - Decisión automática según tabla)
-  - [x] Crear archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/strategy/ContactCreationStrategyFactory.gs`
-  - [x] Implementar `getStrategy()`:
-    - Validar tabla de decisión de 4 escenarios:
-      - Vacío/Vacío → `DummyContactCreationStrategy`
-      - Lleno/Lleno → `CompleteContactCreationStrategy`
-      - Vacío/Lleno O Lleno/Vacío → `ValidationException` con mensaje claro
-    - Retornar estrategia apropiada
-  - [x] Declarar constantes para mensajes de error (sin strings literales)
-  - [x] Test unitario en `gtest/sura/pc/massiveupload/strategy/ContactCreationStrategyFactoryTest.gs`:
-    - Test: `testGetStrategyMustReturnDummyWhenBothFieldsEmpty`
-    - Test: `testGetStrategyMustReturnCompleteWhenBothFieldsFilled`
-    - Test: `testGetStrategyMustThrowExceptionWhenOnlyTypeEmpty`
-    - Test: `testGetStrategyMustThrowExceptionWhenOnlyNumberEmpty`
+- [x] **Implementar ContactCreationStrategyFactory** (AC: 1, 2, 3)
+  - [x] Archivo: `sura/pc/massiveupload/strategy/ContactCreationStrategyFactory.gs`
+  - [x] Tests: `ContactCreationStrategyFactoryTest.gs` (9 tests)
 
 ---
 
-### Fase 3: Refactorización de Transformadores (Basado en Hito #7 del Arquitecto)
+### Fase 3: Refactorización de Transformadores ✅ COMPLETADA
 
 #### 📦 PolicyCenter - Validaciones de Beneficiarios
 
-- [x] **Modificar DefaultBeneficiaryValidation para soportar Dummy** (AC: 1, 2 - Campos opcionales)
-  - [x] Modificar archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/validations/factories/DefaultBeneficiaryValidation.gs`
-  - [x] En `validatePrimaryBeneficiary()`: Remover `TIPO_DOCUMENTO_BENEFICIARIO_1` y `NUM_DOCUMENTO_BENEFICIARIO_1` de campos obligatorios
-  - [x] En `validateNumberAndTypeDocumentBeneficiary()`: Permitir ambos campos vacíos (Dummy) o ambos llenos (Completo)
-  - [x] Modificar archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/validations/OperationValidationBase.gs`
-  - [x] En `validateBeneficiaryDocument()`: Aplicar misma lógica de validación condicional
-  - [x] Agregar display key: `Sura.MassiveUpload.Validations.beneficiaryDocumentIncomplete`
-  - [x] Test unitario en `gtest/sura/pc/massiveupload/validations/factories/DefaultBeneficiaryValidationEESuraTestBase.gs`:
-    - Test: `testValidateBeneficiaryDocumentWhenBothFieldsEmptyForDummy`
-    - Test: `testValidateBeneficiaryDocumentWhenOnlyTypeFilledMustFail`
-    - Test: `testValidateBeneficiaryDocumentWhenOnlyNumberFilledMustFail`
+- [x] **Modificar DefaultBeneficiaryValidation para soportar Dummy** (AC: 1, 2)
+  - [x] Remover `TIPO_DOCUMENTO_BENEFICIARIO_1` y `NUM_DOCUMENTO_BENEFICIARIO_1` de campos obligatorios
+  - [x] Permitir ambos campos vacíos (Dummy) o ambos llenos (Completo)
+  - [x] Agregar display key: `Sura.MassiveUpload.Validations.beneficiaryDocumentIncomplete` (es_CO, en_US, en_US_edg)
+  - [x] Tests: `DefaultBeneficiaryValidationEESuraTestBase.gs` (3 tests nuevos)
 
 #### 📦 PolicyCenter - Refactorización Transformador de Beneficiarios
 
-- [x] **Refactorizar DefaultBeneficiaryTransformer.createInterestContingent()** (AC: 1, 2, 3 - Integración de estrategias)
-  - [x] Modificar archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/transformer/DefaultBeneficiaryTransformer.gs`
-  - [x] Simplificar método `createInterestContingent()` (líneas 85-95):
-    - Eliminar búsqueda directa de contacto inline
-    - Reemplazar con: `var strategy = ContactCreationStrategyFactory.getStrategy(documentType, documentNumber, _iContactPlugin)`
-    - Crear contacto con: `var contact = strategy.createContact(requestDTO, number, _commonTransformer)`
-    - Mantener lógica posterior intacta (mapeo a DTO, asignación de parentesco, etc.)
-  - [x] Reducción esperada: ~30 líneas a ~5 líneas usando factory
-  - [ ] Test unitario en `gtest/sura/pc/massiveupload/transformer/DefaultBeneficiaryTransformerTest.gs`:
-    - Test: `testCreateInterestContingentMustUseDummyStrategyWhenFieldsEmpty`
-    - Test: `testCreateInterestContingentMustUseCompleteStrategyWhenFieldsFilled`
-    - Test: `testCreateInterestContingentMustPropagateValidationException`
-    - Mock: `mockStatic(ContactCreationStrategyFactory, {ContactCreationStrategyFactory#getStrategy()})`
-    - Spy: `_defaultBeneficiaryTransformer = Mockito.spy(new DefaultBeneficiaryTransformer(_commonTransformer, _iContactPlugin))`
+- [x] **Refactorizar DefaultBeneficiaryTransformer.createInterestContingent()** (AC: 1, 2, 3)
+  - [x] Integrar `ContactCreationStrategyFactory.getStrategy()`
 
 ---
 
-### Fase 4: Extensión de CommonTransformer (Basado en Hito #8 del Arquitecto)
+### Fase 4: Extensión de CommonTransformer ✅ COMPLETADA
 
 #### 📦 PolicyCenter - Soporte para Contactos Dummy
 
-- [x] **Extender CommonTransformer.contactToAdditionalInterest()** (AC: 1, 6 - Mapeo de Dummy a DTO)
-  - [x] Modificar archivo: `PolicyCenter/modules/configuration/gsrc/sura/pc/massiveupload/transformer/common/CommonTransformer.gs`
-  - [x] Agregar type checking al inicio del método `contactToAdditionalInterest()` (líneas 350-375):
-    - Agregar: `if (contact typeis PersonDummy_Ext) { return setPersonDummyAdditionalInterestData(contact, requestDTO, number) }`
-  - [x] Crear método `setPersonDummyAdditionalInterestData()`:
-    - Mapear `PersonDummy_Ext` a `PersonExtDTO`
-    - Poblar datos de contacto (nombre, apellidos, dirección)
-    - Retornar `AdditionalInterestDTO` completo
-  - [x] Test unitario en `gtest/sura/pc/massiveupload/transformer/common/CommonTransformerTest.gs`:
-    - Test: `testContactToAdditionalInterestWhenIsPerson` (corregido para nuevo flujo)
-    - Test: `testContactToAdditionalInterestWhenIsCompany` (corregido para nuevo flujo)
+- [x] **Extender CommonTransformer.contactToAdditionalInterest()** (AC: 1, 6)
+  - [x] Agregar soporte para `PersonDummy_Ext`
+  - [x] Crear método `setPersonDummyAdditionalInterestData()`
+  - [x] Tests: `CommonTransformerTest.gs` (2 tests corregidos)
 
-**Nota**: Solo se implementó soporte para `PersonDummy_Ext` ya que por regla de negocio los beneficiarios Dummy siempre son personas (tienen nombres y apellidos).
+**Nota**: Solo se implementó soporte para `PersonDummy_Ext` ya que por regla de negocio los beneficiarios Dummy siempre son personas.
 
 ---
 
-### Fase 5: Validación y Tests de Integración Manuales
+### Fase 5: Code Quality ⏳ PENDIENTE
 
-#### 📦 Validación de Negocio
+#### 📦 Revisión de Código
 
-- [ ] **Crear dataset de prueba exhaustivo** (AC: 1, 2, 3, 4, 5)
-  - [ ] Crear archivo CSV con 50+ escenarios:
-    - 10 registros con campos vacíos (Dummy Persona)
-    - 10 registros con campos completos (Contactos estándar)
-    - 5 registros con campo tipo vacío + número lleno (Error Fase 2)
-    - 5 registros con campo tipo lleno + número vacío (Error Fase 2)
-    - 10 registros con reemplazo de beneficiarios existentes
-    - 10 registros con asegurados sin beneficiarios previos
-  - [ ] Ejecutar carga masiva en ambiente DEV
-  - [ ] Validar ErrorFase1 y ErrorFase2 contienen errores esperados con mensajes claros
-  - [ ] Validar beneficiarios Dummy creados correctamente en base de datos
-  - [ ] Validar beneficiarios completos creados correctamente (regresión)
-  - [ ] Validar reemplazo total de beneficiarios funciona (no fusión)
-
-- [ ] **Validación de visualización en UI** (AC: 6)
-  - [ ] Acceder a póliza master en PolicyCenter
-  - [ ] Consultar riesgo con beneficiarios Dummy creados
-  - [ ] Verificar que se muestra tipo "Dummy Persona"
-  - [ ] Verificar que datos (nombre, apellidos) se visualizan correctamente
-  - [ ] Verificar que beneficiarios estándar se siguen mostrando igual (regresión)
-
----
-
-### Fase 6: QA y Deployment
-
-#### 📦 Code Quality
-
-- [ ] **Ejecutar Agente Peer Review** (MANUAL)
+- [ ] **Ejecutar Agente Peer Review**
   - Revisar cumplimiento de estándares de código Sura
   - Validar nomenclatura, formato, strings en constantes
-  - Verificar tests unitarios con cobertura >70%
+  - Verificar tests unitarios
 
-- [ ] **Resolver incidentes del Peer Review** (MANUAL - Condicional)
+- [ ] **Resolver incidentes del Peer Review** (Condicional)
   - Aplicar correcciones sugeridas por peer reviewer
   - Re-ejecutar tests unitarios
-  - Validar cobertura de código
-
-#### 📦 Deployment DEV
-
-- [ ] **Crear Pull Request** (MANUAL)
-  - Incluir descripción detallada de cambios
-  - Listar archivos modificados/creados
-  - Vincular a historia #825041
-
-- [ ] **Ejecutar pipeline deployment DEV** (MANUAL)
-  - Deployar cambios de Azure (regex.csv)
-  - Deployar cambios de PolicyCenter (código Gosu)
-  - Validar que no hay errores de compilación
-  - Ejecutar suite de tests unitarios en pipeline
-
-#### 📦 Testing Manual
-
-- [ ] **Diseñar set de pruebas manuales** (MANUAL)
-  - Crear casos de prueba para cada criterio de aceptación (1-6)
-  - Definir datos de entrada y resultados esperados
-  - Incluir pruebas de regresión (cargas de riesgos, beneficiarios estándar)
-
-- [ ] **Ejecutar pruebas manuales** (MANUAL)
-  - Ejecutar todos los casos de prueba en ambiente DEV
-  - Documentar resultados (exitosos y fallidos)
-  - Reportar defectos encontrados si aplica
-  - Validar que todos los criterios de aceptación se cumplen
 
 ---
 
-**Notas sobre vinculación con Criterios de Aceptación:**
-- Fase 0: Habilita el flujo completo (sin este cambio, registros con campos vacíos nunca llegan a Fase 2)
-- Fase 1: Limpieza técnica sin impacto directo en AC, pero reduce deuda técnica y riesgo de regresión
-- Fase 2-4: Implementan AC 1, 2, 3 (creación automática según tabla de decisión)
-- Fase 5: Valida AC 1, 2, 3, 4, 5, 6 (todos los escenarios de negocio)
-- Fase 6: Asegura calidad y deployment correcto (no vinculado a AC específicos)
+### Entregables al Equipo de Negocio (Post-Deployment)
+
+> **Nota**: Las siguientes actividades serán realizadas por el equipo de negocio en ambiente de laboratorio después del deployment.
+
+#### Pruebas Funcionales a Realizar por Negocio
+
+| Escenario | Datos de Entrada | Resultado Esperado |
+|-----------|------------------|-------------------|
+| Beneficiario Dummy | TIPO_DOC y NUM_DOC vacíos, con nombres completos | Crear `PersonDummy_Ext` con dirección dummy |
+| Beneficiario Completo | TIPO_DOC y NUM_DOC con valores válidos | Buscar contacto existente o usar datos del CSV |
+| Error: Solo Tipo | TIPO_DOC con valor, NUM_DOC vacío | Error en Fase 2: "documento incompleto" |
+| Error: Solo Número | TIPO_DOC vacío, NUM_DOC con valor | Error en Fase 2: "documento incompleto" |
+| Regresión: Riesgos | Carga de riesgos estándar | Funciona igual que antes |
+
+#### Criterios de Aceptación a Validar
+
+- **AC1**: Beneficiarios sin documento se crean como Dummy automáticamente
+- **AC2**: Error claro cuando solo viene tipo O solo viene número
+- **AC3**: Beneficiarios con documento completo funcionan igual (regresión)
+- **AC4**: Beneficiarios existentes se reemplazan (no se fusionan)
+- **AC5**: Suma de porcentajes sigue validando 100%
+- **AC6**: Beneficiarios Dummy se visualizan correctamente en UI
+
+---
+
+**Resumen de Vinculación con Criterios de Aceptación:**
+- Fase 0: Habilita el flujo (campos opcionales en Azure)
+- Fase 1: Limpieza técnica (reduce deuda técnica)
+- Fase 2-4: Implementan AC 1, 2, 3, 6 (creación automática según tabla de decisión)
+- Fase 5: Asegura calidad de código antes de PR
 
 ---
 
