se actualiza estado de la historia

--- a/docs/stories/825041.habilitar-creacion-de-beneficiarios-dummy-por-carga-masiva-en-vida-grupo.story.md
+++ b/docs/stories/825041.habilitar-creacion-de-beneficiarios-dummy-por-carga-masiva-en-vida-grupo.story.md
@@ -1,6 +1,6 @@
 # Historia #825041: Habilitar creación de beneficiarios "Dummy" por carga masiva en Vida Grupo
 
-**Estado:** En Desarrollo (Developer)
+**Estado:** En Revisión (Peer Review)
 
 ---
 
